--- a/views/index.jade
+++ b/views/index.jade
@@ -19,7 +19,8 @@ block content
                 #JoinOverlay.overlay.bg-inverse.text-white
                     .overlay-body.bg-white.p-3
                         form#JoinForm
-                            input.bg-inverse.text-white.text-center.p-2#PlayerName(placeholder='player-name' name='player_name')
+                            input.bg-inverse.text-white.text-center.p-2#PlayerName(placeholder='player-name' name='player_name' required)
+                            input.bg-inverse.text-white.text-center.p-2#PlayerPin(placeholder='player-pin' name='player_pin' required)
                             button.d-block.w-100.bg-success.text-white(type='submit') join
             .col-7.d-flex.flex-column.mh-100
                 .flex-grow-0
