--- a/public/stylesheets/scss/views/_index.scss
+++ b/public/stylesheets/scss/views/_index.scss
@@ -7,6 +7,13 @@ html, body {
   width: 100%;
   height: auto;
 }
+#JoinForm {
+  input {
+    border-color: white;
+    border-style: solid;
+    border-width: 0px 0px 1px 0px;
+  }
+}
 #CodeContainer {
   height: 100%;
   max-height: 100%;
